kubernetes/api/service.yml
apiVersion: v1
kind: Service

metadata:
  name: conduit-service

spec:
  selector:
    app: conduit

  ports:
    - port: 8081
      targetPort: 8081

  type: NodePort
